Refactoring with positive side effects
- SSLImplementation is an interface and HK2 Contract, GlassfishSSLImpl
  implements it
- SecurityRoleMapperFactoryGen moved to core-ee where is the only usage of it
- SSLConfigurator - lookup removed; in all cases I have seen now works the
    locator variant, but I left the class loader variant here for now.
- JSSEImplementation was used just in tests
    -> moved there as JSSEImplementation4Tests
- SecureAdminConfigUpgrade - the comment was not true any more
- GlassfishServerSocketFactory now always uses locator

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>